--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/icare
+spring.datasource.username=postgres
+spring.datasource.password=2023
+spring.jpa.hibernate.ddl-auto = update
+logging.level.com.example=DEBUG
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.security.user.name=admin
+spring.security.user.password=debc075a-1381-4bea-852a-c84d0470844a
+spring.jpa.open-in-view=false
 
